# SciPapers

./: .gitmodules  SUBMODULE-WORKFLOW.md
academic-agent/: .env.example  .gitignore  README.md  pyproject.toml
academic-agent/.prompts/: code-quality-reviewer-prompt.md  implementer-prompt.md  spec-reviewer-prompt.md
academic-agent/docs/design/: 2025-02-08-academic-agent-design.md
academic-agent/docs/plans/: 2026-02-11-master-agent-implementation.md
academic-agent/src/: __init__.py
academic-agent/src/integration/: __init__.py
academic-agent/src/models/: __init__.py  context.py  intent.py  state.py  workflow.py
academic-agent/src/orchestrator/: __init__.py  mcp_client.py  planner.py
academic-agent/src/workflows/: __init__.py
academic-agent/tests/: test_executor.py  test_mcp_client.py  test_models.py  test_planner.py
